--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,45 +1,24 @@
 {
-  "version": "0.2.0",
-  "configurations": [
+  "version": "2.0.0",
+  "tasks": [
     {
-      "name": "Debug-rclpy(debugpy)",
-      "type": "python",
-      "request": "launch",
-      "program": "${file}",
-      "console": "integratedTerminal"
+      "label": "colcon build",
+      "type": "shell",
+      "command": "source /opt/ros/jazzy/setup.bash && source install/local_setup.bash && colcon build --symlink-install",
+      "group": {
+        "kind": "build",
+        "isDefault": true // <-- 이것이 true여야 Ctrl+Shift+B로 이 태스크가 실행됩니다.
+      },
+      "problemMatcher": [],
+      "detail": "Build ROS 2 workspace"
     },
     {
-      "name": "Debug-rclcpp(gbd)",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/install/${input:package}/lib/${input:package}/${input:node}",
-      "args": [],
-      "preLaunchTask": "colcon build", // tasks.json의 "label"과 일치해야 함. (colcon: build -> colcon build)
-      "stopAtEntry": true,
-      "cwd": "${workspaceFolder}",
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
-    }
-  ],
-  "inputs": [
-    {
-      "id": "package",
-      "type": "promptString",
-      "description": "package name",
-      "default": "topic_service_action_rclcpp_example"
-    },
-    {
-      "id": "node",
-      "type": "promptString",
-      "description": "node name",
-      "default": "argument"
+      "label": "colcon clean",
+      "type": "shell",
+      "command": "source /opt/ros/jazzy/setup.bash && source install/local_setup.bash && rm -rf build install log",
+      "group": "build",
+      "problemMatcher": [],
+      "detail": "Clean ROS 2 workspace"
     }
   ]
 }
